fix header height and values alignements

--- a/scss/main-img-test.scss
+++ b/scss/main-img-test.scss
@@ -2,7 +2,8 @@
  
 section.header-main-img{
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
+    min-height: 600px;
     position: relative;
     display: flex;
     flex-direction: column;
